Getting started with K8S Operator

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -10,7 +10,7 @@ members = [
   "qos_p256",
   "qos_nsm",
 ]
-exclude = ["init", "qos_aws", "qos_system", "toolchain","qos_enclave", "eif_build"]
+exclude = ["init", "qos_aws", "qos_system", "toolchain","qos_enclave", "eif_build", "qos_operator"]
 # We need this to avoid issues with the mock feature uinintentionally being
 # enabled just because some tests need it.
 # https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
