--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
         with:
           lookup-only: true
-          key: toolchain-rust-${{ hashFiles('Makefile,config/make.env') }}
+          key: toolchain-rust-${{ hashFiles('Makefile', ,'config/make.env') }}
           path: cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot
 
       - name: Setup Checkout
@@ -142,7 +142,7 @@ jobs:
         uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
         with:
           fail-on-cache-miss: true
-          key: toolchain-rust-${{ hashFiles('Makefile,config/make.env') }}
+          key: toolchain-rust-${{ hashFiles('Makefile', ,'config/make.env') }}
           path: cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot
 
       - name: Ensure rust cache is ignored by make
