--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ dist/*.linux-x86_64 filter=lfs diff=lfs merge=lfs -text
 fetch/apt/*.deb filter=lfs diff=lfs merge=lfs -text
 fetch/apt/Packages.bz2 filter=lfs diff=lfs merge=lfs -text
 fetch/*.tar filter=lfs diff=lfs merge=lfs -text
+cache/toolchain.tgz filter=lfs diff=lfs merge=lfs -text
