--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           lookup-only: true
           key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tar
+          path: cache/toolchain.tgz
 
       - name: Setup Checkout
         if: steps.cache.outputs.cache-hit != 'true'
@@ -39,7 +39,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make cache/toolchain.tar
+          make cache/toolchain.tgz
 
   # This job pre-warms the cache for rust
   rust-cache:
@@ -82,7 +82,7 @@ jobs:
         with:
           fail-on-cache-miss: true
           key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tar
+          path: cache/toolchain.tgz
 
       - name: Complete the setup of toolchain
         if: steps.cache.outputs.cache-hit != 'true'
@@ -134,7 +134,7 @@ jobs:
         with:
           fail-on-cache-miss: true
           key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tar
+          path: cache/toolchain.tgz
 
       - name: Complete the setup of toolchain
         run: |
