--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -10,37 +10,6 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
-  # This job pre-warms the cache with toolchain
-  toolchain-cache:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
-        with:
-          submodules: true
-
-      - name: Cache
-        id: cache
-        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
-        with:
-          lookup-only: true
-          key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tgz
-
-      - name: Setup Checkout
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get install -y git-lfs
-          git lfs fetch --include "fetch/apt/*"
-          git lfs checkout
-
-      - name: Run `make toolchain`
-        if: steps.cache.outputs.cache-hit != 'true'
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          make cache/toolchain.tgz
-
   # This job pre-warms the cache for rust
   rust-cache:
     runs-on: ubuntu-latest
@@ -68,26 +37,10 @@ jobs:
           git lfs fetch --include "fetch/apt/Packages.bz2"
           git lfs checkout
 
-      # make (and hence toolchain) rely on file timestamps
-      - name: git-restore-mtime
+      - name: Pull toolchain and dist from cache
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          sudo apt-get install -qq -y git-restore-mtime
-          git restore-mtime
-          git submodule foreach 'git restore-mtime'
-
-      - name: Pull toolchain from cache
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
-        with:
-          fail-on-cache-miss: true
-          key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tgz
-
-      - name: Complete the setup of toolchain
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          make toolchain
+          make cache
 
       - name: Run `make cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot`
         if: steps.cache.outputs.cache-hit != 'true'
@@ -99,7 +52,6 @@ jobs:
     name: Build Toolchain Artifacts
     runs-on: ubuntu-latest
     needs:
-      - toolchain-cache
       - rust-cache
     strategy:
       matrix:
@@ -122,23 +74,9 @@ jobs:
           git lfs fetch --include "fetch/apt/Packages.bz2"
           git lfs checkout
 
-      # make (and hence toolchain) rely on file timestamps
-      - name: git-restore-mtime
+      - name: Pull toolchain and dist from cache
         run: |
-          sudo apt-get install -qq -y git-restore-mtime
-          git restore-mtime
-          git submodule foreach 'git restore-mtime'
-
-      - name: Pull toolchain from cache
-        uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
-        with:
-          fail-on-cache-miss: true
-          key: toolchain-${{ hashFiles('config/apt-hashes-x86_64.list') }}
-          path: cache/toolchain.tgz
-
-      - name: Complete the setup of toolchain
-        run: |
-          make toolchain
+          make cache
 
       - name: Pull rust from cache
         uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
