--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ fetch/apt/*.deb filter=lfs diff=lfs merge=lfs -text
 fetch/apt/Packages.bz2 filter=lfs diff=lfs merge=lfs -text
 fetch/*.tar filter=lfs diff=lfs merge=lfs -text
 cache/toolchain.tgz filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
