--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ fetch/apt/Packages.bz2 filter=lfs diff=lfs merge=lfs -text
 fetch/*.tar filter=lfs diff=lfs merge=lfs -text
 cache/toolchain.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/rust-libstd-musl.tgz filter=lfs diff=lfs merge=lfs -text
