use more reliable pcsc server

--- a/config/make.env
+++ b/config/make.env
@@ -7,7 +7,7 @@ LINUX_KEYS_REPO=https://git.kernel.org/pub/scm/docs/kernel/pgpkeys.git
 AWS_NITRO_DRIVER_REPO=https://github.com/aws/aws-nitro-enclaves-sdk-bootstrap.git
 AWS_NITRO_DRIVER_REF=ed24913346a34d719afa2031299253160a2e3460
 AWS_EIF_REF=485fab0b37c1127347056f163c6cd0ae756f7cd0
-PCSC_REPO=https://salsa.debian.org/rousseau/PCSC
+PCSC_REPO=https://github.com/LudovicRousseau/PCSC
 PCSC_REF=15c16c7796607b1c8a2ce253d3f536918ab26b4a
 RUST_REPO=https://github.com/rust-lang/rust
 RUST_REF=4b91a6ea7258a947e59c6522cd5898e7c0a6a88f
