--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ fetch/*.tar filter=lfs diff=lfs merge=lfs -text
 cache/toolchain.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/rust-libstd-musl.tgz filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/nsm.ko filter=lfs diff=lfs merge=lfs -text
