--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ cache/toolchain.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/rust-libstd-musl.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/nsm.ko filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/lib/libpcsclite.a filter=lfs diff=lfs merge=lfs -text
