--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ cache/aws/x86_64/bzImage filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/rust-libstd-musl.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/nsm.ko filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/lib/libpcsclite.a filter=lfs diff=lfs merge=lfs -text
+cache/aws/x86_64/lib64/libssl.a filter=lfs diff=lfs merge=lfs -text
