add gen_init_cpio to lfs cache

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ cache/aws/x86_64/rust-libstd-musl.tgz filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/nsm.ko filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/lib/libpcsclite.a filter=lfs diff=lfs merge=lfs -text
 cache/aws/x86_64/lib64/libssl.a filter=lfs diff=lfs merge=lfs -text
+cache/bin/gen_init_cpio filter=lfs diff=lfs merge=lfs -text
