lfs to github actions cache

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -10,10 +10,8 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
-  # This job pre-warms the cache for rust
-  rust-cache:
+  lfs-to-github-cache:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
     steps:
       - name: Checkout sources
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
@@ -21,38 +19,32 @@ jobs:
           fetch-depth: 0
           submodules: true
 
+      - name: Generate Cache Key
+        id: cache-key
+        run: |
+          cache_filenames=$(make cache-filenames)
+          openssl sha256 $cache_filenames | openssl sha256 | awk '{ print "key="$2 }' >> $GITHUB_OUTPUT
+          printf "filenames<<EOF\n%s\nEOF\n" "$(printf "%s" "$cache_filenames" | tr ' ' '\n')" >> $GITHUB_OUTPUT
+
       - name: Cache
         id: cache
         uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
           lookup-only: true
-          key: toolchain-rust-${{ hashFiles('Makefile','config/make.env') }}
-          path: cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot
+          key: lfs-${{steps.cache-key.outputs.key}}
+          path: ${{steps.cache-key.outputs.filenames}}
 
       - name: Setup Checkout
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          sudo apt-get install -y git-lfs
-          git lfs fetch --include "fetch" --exclude "fetch/apt,dist"
-          git lfs fetch --include "fetch/apt/Packages.bz2"
-          git lfs checkout
-
-      - name: Pull toolchain and dist from cache
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: |
           make cache
-
-      - name: Run `make cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot`
-        if: steps.cache.outputs.cache-hit != 'true'
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          make cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot
+          ls -Rlah cache
 
   build:
     name: Build Toolchain Artifacts
     runs-on: ubuntu-latest
     needs:
-      - rust-cache
+      - lfs-to-github-cache
     strategy:
       matrix:
         include:
@@ -67,32 +59,26 @@ jobs:
           fetch-depth: 0
           submodules: true
 
-      - name: Setup Checkout
+      - name: Generate Cache Key
+        id: cache-key
         run: |
-          sudo apt-get install -y git-lfs
-          git lfs fetch --include "fetch" --exclude "fetch/apt,dist"
-          git lfs fetch --include "fetch/apt/Packages.bz2"
-          git lfs checkout
+          cache_filenames=$(make cache-filenames)
+          openssl sha256 $cache_filenames | openssl sha256 | awk '{ print "key="$2 }' >> $GITHUB_OUTPUT
+          printf "filenames<<EOF\n%s\nEOF\n" "$(printf "%s" "$cache_filenames" | tr ' ' '\n')" >> $GITHUB_OUTPUT
 
-      - name: Pull toolchain and dist from cache
-        run: |
-          make cache
-
-      - name: Pull rust from cache
+      - name: Cache
+        id: cache
         uses: actions/cache@704facf57e6136b1bc63b828d79edcd491f0ee84 # v3.3.2
         with:
           fail-on-cache-miss: true
-          key: toolchain-rust-${{ hashFiles('Makefile','config/make.env') }}
-          path: cache/aws/x86_64/src/rust/build/x86_64-unknown-linux-gnu/stage0-sysroot
-
-      - name: Ensure rust cache is ignored by make
-        run: |
-          touch --date=@0 cache/aws/x86_64/src/rust
+          key: lfs-${{steps.cache-key.outputs.key}}
+          path: ${{steps.cache-key.outputs.filenames}}
 
       - name: Run `make out/${{ matrix.target }}`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make -d --assume-old=cache/aws/x86_64/src/rust out/${{ matrix.target }}
+          ls -Rlah cache
+          make -d toolchain-restore-mtime out/${{ matrix.target }}
 
       - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
         with:
