--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -77,7 +77,7 @@ jobs:
         shell: 'script -q -e -c "bash {0}"'
         run: |
           touch cache/toolchain.tgz
-          make -d toolchain-restore-mtime out/${{ matrix.target }}
+          make -d toolchain-restore-mtime toolchain out/${{ matrix.target }}
 
       - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
         with:
