Use s3 backed git lfs
create lfs action

trivial fixes

add clear disk space action

checkout sources

add mono clone action

clone with checkout

do lfs setup in generate cache

Don't always run lfs pull

release 2023.11.07

update readme

Use qos specific AWS role

Also run lfs setup

mono ssh key

pass ssh secret as input

Add input to top of workflow

Remove AWS credentials

force cache rebuild to force lfs pull

Aws login

run make

run make dist

pull everything

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -12,12 +12,33 @@ on:
 jobs:
   lfs-to-github-cache:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::799078726966:role/github-qos
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           fetch-depth: 0
           submodules: true
+
+      - name: Clear disk space
+        uses: ./.github/actions/clear-disk-space
+
+      - name: Setup LFS
+        uses: ./.github/actions/lfs-setup
+        with:
+          monoSshKey: ${{ secrets.MONO_SSH_KEY }}
+          pullLFSObjects: true
+
+      - name: Download submodules
+        run: GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
+        shell: bash
 
       - name: Generate Cache Key
         id: cache-key
