--- a/.github/actions/lfs-setup/action.yml
+++ b/.github/actions/lfs-setup/action.yml
@@ -31,7 +31,7 @@ runs:
       uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
       with:
         aws-region: us-east-1
-        role-to-assume: arn:aws:iam::799078726966:role/github-mono
+        role-to-assume: arn:aws:iam::799078726966:role/github-qos
 
     - name: Clone mono
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
