--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -23,3 +23,4 @@ qos_core = { path = "../qos_core", features = ["mock"], default-features = false
 borsh = { version = "0.10" }
 aws-nitro-enclaves-nsm-api = { version = "0.3", default-features = false }
 rand = "0.8"
+ureq = { version = "2.8" }
