--- a/src/qos_hex/Cargo.toml
+++ b/src/qos_hex/Cargo.toml
@@ -2,3 +2,8 @@
 name = "qos_hex"
 version = "0.1.0"
 edition = "2021"
+
+serde = {version = "1", optional = true, default-features = false }
+
+# [features]
+# serde_derive = ["serde"]
