--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -12,7 +12,7 @@ axum = { version = "0.6.20", features = ["http1", "tokio", "json"], default-feat
 tokio = { version = "1.33", features = ["macros", "rt-multi-thread"], default-features = false }
 borsh = { version = "0.10" }
 serde_json = { version = "1" }
-serde = {version = "1", default-features = false }
+serde = { version = "1", features = ["derive"], default-features = false }
 
 [features]
 vm = ["qos_core/vm"]
