--- a/src/qos_hex/Cargo.toml
+++ b/src/qos_hex/Cargo.toml
@@ -2,6 +2,7 @@
 name = "qos_hex"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 serde = {version = "1", optional = true, default-features = false }
