--- a/src/qos_host/Cargo.toml
+++ b/src/qos_host/Cargo.toml
@@ -2,6 +2,7 @@
 name = "qos_host"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 qos_core = { path = "../qos_core", default-features = false }
