--- a/src/integration/Cargo.toml
+++ b/src/integration/Cargo.toml
@@ -25,3 +25,4 @@ aws-nitro-enclaves-nsm-api = { version = "0.3", default-features = false }
 rand = "0.8"
 ureq = { version = "2.9", features = ["json"], default-features = false }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
