--- a/src/qos_client/Cargo.toml
+++ b/src/qos_client/Cargo.toml
@@ -20,6 +20,7 @@ rand_core = { version = "0.6", default-features = false }
 zeroize = { version = "1.6", default-features = false }
 rpassword = { version = "7", default-features = false }
 serde_json = { version = "1" }
+serde = { version = "1", default-features = false }
 
 x509 = { version = "0.2", default-features = false, optional = true }
 yubikey = { version = "*", features = ["untested"], default-features = false, optional = true }
