--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -37,6 +37,11 @@ jobs:
         run: GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
         shell: bash
 
+      - name: Pull LFS artifacts
+        shell: 'script -q -e -c "bash {0}"'
+        run: |
+          git lfs pull
+
       - name: Generate Cache Key
         id: cache-key
         run: |
