--- a/.github/actions/lfs-setup/action.yml
+++ b/.github/actions/lfs-setup/action.yml
@@ -59,4 +59,4 @@ runs:
     - name: Pull LFS artifacts
       shell: 'script -q -e -c "bash {0}"'
       run: |
-        git lfs pull
+        GIT_TRACE=1 GIT_TRANSFER_TRACE=1 git lfs pull
