--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Pull LFS artifacts
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          git lfs pull
+          GIT_TRACE=1 GIT_TRANSFER_TRACE=1 git lfs pull
 
       - name: Generate Cache Key
         id: cache-key
