--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -58,7 +58,7 @@ jobs:
           fetch-depth: 0
           submodules: true
 
-      - name: Run `make dist`
+      - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make dist
+          make
