get docker version

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -52,6 +52,9 @@ jobs:
 
           docker buildx create --driver docker-container --bootstrap --name build --use
 
+      - name: Check Docker Version
+        run: docker --version
+
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
