--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -10,8 +10,8 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
-  build:
-    name: build default targets
+  docker:
+    name: setup docker
     runs-on: ubuntu-latest
     steps:
       - name: Setup Latest docker
@@ -55,6 +55,18 @@ jobs:
       - name: Check Docker Version
         run: docker --version
 
+  build:
+    name: build artifacts
+    runs-on: ubuntu-latest
+    needs:
+      - docker
+    strategy:
+      matrix:
+        include:
+          - target: qos_client.tar
+          - target: qos_host.tar
+          - target: qos_client.tar
+    steps:
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
@@ -64,4 +76,10 @@ jobs:
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
-          make
+          make out/${{ matrix.target }}
+
+      - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+        with:
+          name: ${{ matrix.target }}
+          path: out/${{ matrix.target }}
+          retention-days: 1
