--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -107,7 +107,7 @@ jobs:
             ghcr.io
           for image in ${images}; do
             skopeo copy --all \
-              "oci-archive:./${image}.oci.x86_64.tar/${image}.oci.x86_64.tar" \
+              "oci-archive:./${image}.tar/${image}.tar" \
               "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
             for tag in ${tags}; do
               skopeo copy --all \
