Add github registry mirror

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -49,7 +49,8 @@ jobs:
           {
             "features": {
               "containerd-snapshotter": true
-            }
+            },
+            "registry-mirrors": ["https://ghcr.io/tkhq"]
           }
           EOF
 
