Containers: save space by deleting apt lists

--- a/src/images/core/Dockerfile
+++ b/src/images/core/Dockerfile
@@ -5,7 +5,9 @@ RUN cargo build --manifest-path ./qos_core/Cargo.toml --bin qos_core --features 
 # We don't need the Rust toolchain to run the binary!
 FROM debian:bullseye-slim AS runtime
 WORKDIR app
-RUN apt-get update \
-  && apt-get install -y libssl-dev
+RUN apt-get update && \
+  apt-get install -y libssl-dev && \
+  rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /target/debug/qos_core /usr/local/bin
 ENTRYPOINT ["/usr/local/bin/qos_core", "--port", "6969", "--cid", "16"]
