--- a/src/images/sample-app/Dockerfile
+++ b/src/images/sample-app/Dockerfile
@@ -5,6 +5,8 @@ RUN cargo build --bin sample_app --features vm --no-default-features
 # We don't need the Rust toolchain to run the binary!
 FROM debian:bullseye-slim AS runtime
 WORKDIR app
-RUN apt-get update \
-  && apt-get install -y libssl-dev
+RUN apt-get update && \
+  apt-get install -y libssl-dev && \
+  rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /target/debug/sample_app /usr/local/bin
