--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -1,4 +1,4 @@
-name: stagex-build
+name: artifacts-build
 
 on:
   push:
@@ -10,7 +10,6 @@ on:
   workflow_dispatch: # Allows manual invocation
 
 jobs:
-
   build:
     name: build artifacts
     runs-on: ubuntu-latest
@@ -21,52 +20,11 @@ jobs:
           - target: qos_host.tar
           - target: qos_client.tar
     steps:
-      - name: Setup Latest docker
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          # This script basically always needs root
-          [[ $EUID -ne 0 ]] && exec sudo /bin/sh "$0" "$@"
+      - name: Setup and configure docker
+        uses: ./.github/actions/docker-setup
 
-          # uninstall all conflicting packages:
-          for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; do sudo apt-get remove $pkg; done
-
-          # Add Docker's official GPG key:
-          sudo apt-get update
-          sudo apt-get install ca-certificates curl
-          sudo install -m 0755 -d /etc/apt/keyrings
-          sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-          sudo chmod a+r /etc/apt/keyrings/docker.asc
-
-          # Add the repository to Apt sources:
-          echo \
-            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-            $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
-            sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update
-
-          cat << EOF >/etc/docker/daemon.json
-          {
-            "features": {
-              "containerd-snapshotter": true
-            },
-            "registry-mirrors": ["https://ghcr.io/tkhq"]
-          }
-          EOF
-
-          # Install required packages
-          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-
-          systemctl restart docker
-
-          docker buildx create --driver docker-container --bootstrap --name build --use
-
-      - name: Check Docker Version
-        run: docker --version
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-        with:
-          fetch-depth: 0
-          submodules: true
 
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
@@ -91,7 +49,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
       - name: Display structure of downloaded files
-        run: ls -R /etc/usr/artifacts/
+        run: ls -R /home/runner/work/qos/qos
       - name: Upload images to GHCR
         env:
           images: >-
@@ -109,7 +67,7 @@ jobs:
             ghcr.io
           for image in ${images}; do
             skopeo copy --all --dest-decompress \
-              "dir:/etc/usr/artifacts/${image}.tar/${image}.tar" \
+              "dir:/home/runner/work/qos/qos/${image}.tar/${image}.tar" \
               "docker://ghcr.io/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
             for tag in ${tags}; do
               skopeo copy --all \
