--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -24,7 +24,32 @@ jobs:
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Setup and configure docker
-        uses: ./.github/actions/docker-setup
+        shell: 'script -q -e -c "bash {0}"'
+        run: |
+          for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; \
+            do apt-get remove $pkg; \
+          done
+          apt-get update
+          apt-get install ca-certificates curl
+          install -m 0755 -d /etc/apt/keyrings
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+          chmod a+r /etc/apt/keyrings/docker.asc
+          echo \
+            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+            $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+            tee /etc/apt/sources.list.d/docker.list > /dev/null
+          apt-get update
+          cat << EOF >/etc/docker/daemon.json
+          {
+            "features": {
+            "containerd-snapshotter": true
+            },
+            "registry-mirrors": ["https://ghcr.io/tkhq"]
+          }
+          EOF
+          apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          systemctl restart docker
+          docker buildx create --driver docker-container --bootstrap --name build --use
 
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
