--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -22,41 +22,12 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      - name: Setup and configure docker
-        shell: 'script -q -e -c "bash {0}"'
-        run: |
-          [[ $EUID -ne 0 ]] && exec sudo /bin/sh "$0" "$@"
-          for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker containerd runc; \
-            do apt-get remove $pkg; \
-          done
-          apt-get update
-          apt-get install ca-certificates curl
-          install -m 0755 -d /etc/apt/keyrings
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
-          chmod a+r /etc/apt/keyrings/docker.asc
-          echo \
-            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
-            $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
-            tee /etc/apt/sources.list.d/docker.list > /dev/null
-          apt-get update
-          cat << EOF >/etc/docker/daemon.json
-          {
-            "features": {
-            "containerd-snapshotter": true
-            },
-            "registry-mirrors": ["https://ghcr.io/tkhq"]
-          }
-          EOF
-          apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
-          systemctl restart docker
-          docker buildx create --driver docker-container --bootstrap --name build --use
-
+      - name: Setup Docker
+        uses: ./.github/actions/docker-setup
       - name: Run `make`
         shell: 'script -q -e -c "bash {0}"'
         run: |
           make out/${{ matrix.target }}
-
       - uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
         with:
           name: ${{ matrix.target }}
