fix make deps for build-base

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,9 +4,8 @@ name: PR
 
 jobs:
   test:
-    name: Test Suite
+    name: test
     runs-on: ubuntu-latest
-    timeout-minutes: 45
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
