pcrs output and fixed platform lock

--- a/src/images/qos_enclave/Containerfile
+++ b/src/images/qos_enclave/Containerfile
@@ -50,13 +50,14 @@ RUN eif_build \
 	--kernel /bzImage \
 	--kernel_config /linux.config \
 	--ramdisk /build_cpio/rootfs.cpio \
-	--pcrs_output nitro.pcrs \
+	--pcrs_output /nitro.pcrs \
 	--output /nitro.eif \
 	--cmdline 'reboot=k initrd=0x2000000,3228672 root=/dev/ram0 panic=1 pci=off nomodules console=ttyS0 i8042.noaux i8042.nomux i8042.nopnp i8042.dumbkbd'
 
 FROM base as install
 WORKDIR /rootfs
 COPY --from=build-eif /nitro.eif .
+COPY --from=build-eif /nitro.pcrs .
 COPY --from=build-qos_enclave /qos_enclave .
 RUN find . -exec touch -hcd "@0" "{}" +
 
