--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -34,6 +34,55 @@ jobs:
           path: out/${{ matrix.target }}
           retention-days: 1
 
+  upload_to_ecr:
+    name: Upload toolchain artifacts to ECR
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@010d0da01d0b5a38af31e9c3470dbfdabdecca3a # v4.0.1
+        with:
+          aws-region: us-east-1
+          role-to-assume: arn:aws:iam::799078726966:role/github-qos
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+
+      - name: Upload images to ECR
+        env:
+          images: >-
+            qos_client
+            qos_enclave
+            qos_host
+          tags: >-
+            ${{ github.ref == format('refs/heads/{0}', 'main') && 'latest' || '' }}
+            ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
+            ${{ github.event_name == 'push' && github.ref_name || '' }}
+        run: |
+          skopeo login \
+            --username "${{ steps.login-ecr.outputs.docker_username_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
+            --password "${{ steps.login-ecr.outputs.docker_password_799078726966_dkr_ecr_us_east_1_amazonaws_com }}" \
+            ${{ steps.login-ecr.outputs.registry }}
+          for image in ${images}; do
+            skopeo copy --all --dest-decompress \
+              "oci-archive:/home/runner/work/qos/qos/${image}.oci.x86_64.tar/${image}.oci.x86_64.tar" \
+              "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}"
+            for tag in ${tags}; do
+              skopeo copy --all \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:sha-${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}" \
+                "docker://${{ steps.login-ecr.outputs.registry }}/tkhq/${image}:${tag}"
+            done
+          done
+
   upload_to_ghcr:
     name: Upload toolchain artifacts to GHCR
     runs-on: ubuntu-latest
@@ -45,8 +94,6 @@ jobs:
     steps:
       - name: Download Artifacts
         uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
-      - name: Display structure of downloaded files
-        run: ls -R /home/runner/work/qos/qos
       - name: Upload images to GHCR
         env:
           images: >-
